git ignore for qiniuyun

--- a/source/_drafts/性能调优实践.md
+++ b/source/_drafts/性能调优实践.md
@@ -34,5 +34,5 @@ AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javasc
  - 思路：服务器的机器和本地机器肯定有不同，但是两边最终都是build出来docker image，image内的环境配置和安装的软件都是一样的，搜了“gzip不生效”找到的基本是怎么配置gzip -> 两边不同的还有协议，服务器端proxy设置了强制ssl，所有访问都是https本地是http://localhost，搜“gzip https 不生效”找到答案：因为有BREACH（大致是ssl会对文件加密，以保护文件内容不被他人获取和篡改）但是如果引入gzip，hackers可以通过victim的机器发送大量明文请求和压缩算法(gzip 压缩在 HTTP 中的工作方式是这样：如果在响应中有同一个字符串的多个实例，第一个实例将被保留，而其余实例将被替换成指向第一个实例位置的短引用，以减少响应消息的体积)来破解文件内容。=> SSL和gzip不能同时使用（搜索时候找到了一个关于apache的SSLCompression的配置，进行了尝试，无果）
 
 # Brotli实践
- - 问题：SSL和gzip不能同时使用，对于我们现有site SSL不能disable => 无法实现服务器端实现？
- - 思路：看了一眼bootstrap网站，load很快，它也是https
+ - 问题：SSL和gzip不能同时使用，对于我们现有site SSL不能disable => 无法实现服务器端优化？
+ - 思路：(看看别人是怎么做的）-> bootstrap，load很快，它也是https，接着看了network，{% qnimg performance190627/performance-bootstrap-brotli.png title:bootstrap_brotli alt:bootstrap_brotli %}
