--- a/source/_posts/面试题笔记/刷题后感——递归.md
+++ b/source/_posts/面试题笔记/刷题后感——递归.md
@@ -3,7 +3,7 @@ title: 刷题后感——递归
 id: 38
 categories:
   - 学海无涯我游啊游
-  - 去特么的面试题
+  - Javascript
 date: 2017-02-12 00:20:41
 tags:
 ---
@@ -18,4 +18,3 @@ tags:
 
 递归深度可以理解为系统栈保存的深度（题目解析这么说的，摊手）。那同样是上面这个例子，两种处理方式就可以看出栈的深度不同，小分区，处理1时，栈中存一个元素（2，3，4），返回后再处理（2，3，4），同样（3，4）仅占用一个位置，这样栈的深度仅为1。第二种方式，处理（2，3，4）时，1入栈，-&gt;2入栈，处理（3，4）-&gt;3入栈-&gt;处理4，再依次返回，所以在处理4的时候栈的深度可以达到4。
 
-——以上为个人根据答案和讨论区内容的理解，如有瞎扯淡，望指正。
